non-compatible/tests/ecc-aws-134-clb_with_sensitive_service_is_exposed_to_entire_internet/placebo-red/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "Description": "Managed by Terraform",
                "GroupName": "134_c7n_security_group2_red",
                "IpPermissions": [
                    {
                        "FromPort": 110,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 110,
                        "UserIdGroupPairs": []
                    },
                    {
                        "FromPort": 25,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 25,
                        "UserIdGroupPairs": []
                    }
                ],
                "OwnerId": "this",
                "GroupId": "sg-02200272b553b73a8",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": []
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "134_c7n_security_group2_red"
                    }
                ],
                "VpcId": "vpc-017771bb1580daa30"
            },
            {
                "Description": "Managed by Terraform",
                "GroupName": "134_c7n_security_group1_red",
                "IpPermissions": [
                    {
                        "FromPort": 23,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 23,
                        "UserIdGroupPairs": []
                    }
                ],
                "OwnerId": "this",
                "GroupId": "sg-0e21f260ce2257500",
                "IpPermissionsEgress": [],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "134_c7n_security_group1_red"
                    }
                ],
                "VpcId": "vpc-017771bb1580daa30"
            }
        ],
        "ResponseMetadata": {}
    }
}
